; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_str.c_CRYPT_InitializeKeynameKeeper.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_str.c_CRYPT_InitializeKeynameKeeper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.KeynameKeeper = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.KeynameKeeper*)* @CRYPT_InitializeKeynameKeeper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CRYPT_InitializeKeynameKeeper(%struct.KeynameKeeper* %0) #0 {
  %2 = alloca %struct.KeynameKeeper*, align 8
  store %struct.KeynameKeeper* %0, %struct.KeynameKeeper** %2, align 8
  %3 = load %struct.KeynameKeeper*, %struct.KeynameKeeper** %2, align 8
  %4 = getelementptr inbounds %struct.KeynameKeeper, %struct.KeynameKeeper* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.KeynameKeeper*, %struct.KeynameKeeper** %2, align 8
  %7 = getelementptr inbounds %struct.KeynameKeeper, %struct.KeynameKeeper* %6, i32 0, i32 2
  store i32 %5, i32* %7, align 4
  %8 = load %struct.KeynameKeeper*, %struct.KeynameKeeper** %2, align 8
  %9 = getelementptr inbounds %struct.KeynameKeeper, %struct.KeynameKeeper* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @ARRAY_SIZE(i32 %10)
  %12 = load %struct.KeynameKeeper*, %struct.KeynameKeeper** %2, align 8
  %13 = getelementptr inbounds %struct.KeynameKeeper, %struct.KeynameKeeper* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  ret void
}

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
